--- a/style500px.css
+++ b/style500px.css
@@ -1,4 +1,4 @@
-@media (min-width: 600px) {
+@media (min-width: 500px) {
 
     @import url('https://fonts.google.com/specimen/Barlow+Semi+Condensed');
 
@@ -12,23 +12,29 @@
         background-color: hsl(210, 46%, 95%);
         width: 100%;
         height: 100%;
+      
 
     }
 
     main {
-        width: 80rem;
-        height: 50%;
+        width: 100%;
+        height: 100%;
         font-family: 'Barlow Semi Condensed';
         margin: auto;
-        margin-top: 1rem;
+        margin-top: 3rem;
         gap: 1.5rem;
-        display: grid;
+        /* display: grid;
         grid-template-areas: "purple gray white-two"
-            "white-one black white-two";
+            "white-one black white-two"; */
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            align-items: center;
+            flex-direction: column;
     }
 
     .purple {
-        width: 36rem;
+        width: 27rem;
         grid-area: purple;
         padding: 2.2rem;
         font-family: 'Barlow Semi Condensed';
@@ -73,7 +79,7 @@
     }
 
     .gray {
-        width: 20rem;
+        width: 27rem;
         padding: 2.2rem;
         grid-area: gray;
         font-family: 'Barlow Semi Condensed';
@@ -115,7 +121,7 @@
     }
 
     .white-one {
-        width: 20rem;
+        width: 27rem;
         padding: 2.2rem;
         grid-area: white-one;
         font-family: 'Barlow Semi Condensed';
@@ -157,9 +163,9 @@
     }
 
     .black {
-        width: 36rem;
+        width: 27rem;
         padding: 2.2rem;
-        margin-left: -16rem;
+        margin-left: 0rem;
         grid-area: black;
         font-family: 'Barlow Semi Condensed';
         background-color: hsl(219, 29%, 14%);
@@ -200,7 +206,7 @@
     }
 
     .white-two {
-        width: 20rem;
+        width: 27rem;
         padding: 2.2rem;
         grid-area: white-two;
         font-family: 'Barlow Semi Condensed';
